add new innovation and add SEO keywords

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/cv.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rahil_Huseynov_CV</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/cv.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="Rahil Huseynov, software developer, web developer, JavaScript, React, HTML, CSS, front-end developer, full-stack developer, portfolio, CV, resume, curriculum vitae, IT professional, coding, web design, GitHub, projects, contact, Baku developer, web applications, SEO, personal website, developer skills, programming, coding experience, freelance developer">
+  <title>Rahil_Huseynov_CV</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
