--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/cv.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Rahil Huseynov's CV website. Professional software developer specializing in JavaScript, React, and front-end development." />
   <meta name="keywords"
     content="Rahil Huseynov, software developer, web developer, JavaScript, React, HTML, CSS, front-end developer, full-stack developer, portfolio, CV, resume, curriculum vitae, IT professional, coding, web design, GitHub, projects, contact, Baku developer, web applications, SEO, personal website, developer skills, programming, coding experience, freelance developer">
   <title>Rahil_Huseynov_CV</title>
