--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Rahil Huseynov's CV website. Professional software developer specializing in JavaScript, React, and front-end development." />
   <meta name="keywords"
     content="Rahil Huseynov, software developer, web developer, JavaScript, React, HTML, CSS, front-end developer, full-stack developer, portfolio, CV, resume, curriculum vitae, IT professional, coding, web design, GitHub, projects, contact, Baku developer, web applications, SEO, personal website, developer skills, programming, coding experience, freelance developer">
-  <title>Rahil_Huseynov_CV</title>
+  <title>Rahil Huseynov | Front-End Developer</title>
 </head>
 
 <body>
